Add yandex metrica

--- a/client/index.html
+++ b/client/index.html
@@ -48,11 +48,37 @@
       document.head.appendChild(loadingContainerStyle);
     </script>
     <script defer type="module" src="/src/main.jsx"></script>
+    <script>
+      if (!sessionStorage.getItem("YM_STOP_SPAM_ME")) {
+        (function (m, e, t, r, i, k, a) {
+          m[i] = m[i] || function () {
+            (m[i].a = m[i].a || []).push(arguments)
+          };
+          m[i].l = 1 * new Date();
+          for (var j = 0; j < document.scripts.length; j++) {
+            if (document.scripts[j].src === r) {
+              return;
+            }
+          }
+          k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(98439120, "init", {
+          defer: true,
+          clickmap: true,
+          trackLinks: true,
+          accurateTrackBounce: true,
+          webvisor: false
+        });
+      }
+    </script>
   </head>
   <body>
     <div id="root">
       <div id="loading-container"></div>
     </div>
     <script type="module" src="/src/main.jsx"></script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/<my-pretty-ym-counter-id>" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   </body>
 </html>
